[gd_scene load_steps=10 format=3 uid="uid://uh6yphtkvgug"]

[ext_resource type="Texture2D" uid="uid://65sh5jc6v43y" path="res://assets/sprites/slime_purple.png" id="1_67miy"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_jwua5"]
[ext_resource type="PackedScene" uid="uid://bbmde1mgrxm23" path="res://scenes/killzone.tscn" id="2_e5v5g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v8ngw"]
atlas = ExtResource("1_67miy")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae5hv"]
atlas = ExtResource("1_67miy")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxjns"]
atlas = ExtResource("1_67miy")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxkva"]
atlas = ExtResource("1_67miy")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_r6m6e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8ngw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae5hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxjns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxkva")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yenl"]
size = Vector2(12, 11)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_jwua5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_r6m6e")
autoplay = "default"

[node name="Killzone" parent="." instance=ExtResource("2_e5v5g")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
visible = false
shape = SubResource("RectangleShape2D_7yenl")

[node name="RayCast0" type="RayCast2D" parent="."]
target_position = Vector2(0, -8)

[node name="RayCast90" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(0, -8)

[node name="RayCast180" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(0, -8)

[node name="RayCast270" type="RayCast2D" parent="."]
rotation = 4.71239
target_position = Vector2(0, -8)
